Add picture of pancakes to pancakes.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <body>
             <h1>Odin Recipes</h1>
-
+            <p><a href="file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></p>
 
 
         </body>
