Add description of recipe

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,2 +1,6 @@
 <h1>Good Ole' Fashioned Pancakes</h1>
+
 <img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes">
+
+<p><h2>Description</h2></p>
+<p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
