--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,3 +4,15 @@
 
 <p><h2>Description</h2></p>
 <p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
+
+<p><h2>Ingredients</h2></p>
+
+<ul>
+    <li>1 1/2 cups all-purpose flour</li>
+    <li>3 1/2 teaspoons baking powder</li>
+    <li>1 teaspoon salt</li>
+    <li>1 tablespoon white sugar</li>
+    <li>1 1/4 cups milk</li>
+    <li>1 egg</li>
+    <li>3 tablespoons butter, melted</li>
+</ul>
