Add steps for recipe and add comments for readability

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,10 +1,13 @@
+<!--title of recipe-->
 <h1>Good Ole' Fashioned Pancakes</h1>
 
 <img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes">
 
+<!--description of recipe-->
 <p><h2>Description</h2></p>
 <p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
 
+<!--ingredients section-->
 <p><h2>Ingredients</h2></p>
 
 <ul>
@@ -16,3 +19,16 @@
     <li>1 egg</li>
     <li>3 tablespoons butter, melted</li>
 </ul>
+
+<!--steps for recipe-->
+<h2>Steps</h2>
+
+<ol>
+    <p><li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg
+        and melted butter; mix until smooth.
+    </li></p>
+    <p><li>Heat a lightly ooiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup
+        for each pancake. Brown on both sides and serve hot.
+    </li></p>
+
+</ol>
