Add Creamy Cajun Chicken Pasta Recipe. Create unordered list for readability

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
         <body>
             <h1>Odin Recipes</h1>
-            <p><a href="file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></p>
+            
+            <ul>
+                <li><a href = "file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li>
+                <li><a href = "file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li>
+            
+            </ul>
 
 
         </body>
