Remove unneeded paragraph syntax

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,11 +4,11 @@
 <img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes">
 
 <!--description of recipe-->
-<p><h2>Description</h2></p>
+<h2>Description</h2>
 <p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
 
 <!--ingredients section-->
-<p><h2>Ingredients</h2></p>
+<h2>Ingredients</h2>
 
 <ul>
     <li>1 1/2 cups all-purpose flour</li>
