Add description section of One Pot Creamy Chicken Pasta

--- a/recipes/chicken-pasta.html
+++ b/recipes/chicken-pasta.html
@@ -2,3 +2,9 @@
 <h1>One Pot Creamy Cajun Chicken Pasta</h1>
 
 <img src = "../images/chicken-pasta.jpeg" alt = "One Pot Creamy Cajun Chicken Pasta">
+
+<!--description of recipe-->
+<h2>Description</h2>
+    <p>This One Pot Creamy Cajun Chicken Pasta is incredibly easy to make and is perfect for weeknight dinners. This pasta is <em>spicy</em>, but can be adjusted
+        by adding or removing the cayenne pepper in the Cajun Seasoning. C'est ce bon!
+    </p>
