Add ingredient section for chicken pasta recipe

--- a/recipes/chicken-pasta.html
+++ b/recipes/chicken-pasta.html
@@ -8,3 +8,31 @@
     <p>This One Pot Creamy Cajun Chicken Pasta is incredibly easy to make and is perfect for weeknight dinners. This pasta is <em>spicy</em>, but can be adjusted
         by adding or removing the cayenne pepper in the Cajun Seasoning. C'est ce bon!
     </p>
+
+<!--ingredients section-->
+<h2>Ingredients</h2>
+<h4>Cajun Season</h4>
+<ul>
+    <li>2 tsp smoked paprika</li>
+    <li>1 tsp oregano</li>
+    <li>1 tsp thyme</li>
+    <li>1/2 tsp garlic powder</li>
+    <li>1/2 tsp onion powder</li>
+    <li>1/4 cayenne pepper (adjust for spice level</li>
+    <li>1/4 tsp black pepper</li>
+    <li>1/4 tsp salt</li>
+</ul>
+
+<h4>Chicken Pasta</h4>
+<ul>
+    <li>1 Tbsp olive oil</li>
+    <li>1 Tbsp butter</li>
+    <li>1 lb. boneless, skinless chicken breast</li>
+    <li>1 yellow onion, diced</li>
+    <li>1/2 lb. penne pasta (uncooked)</li>
+    <li>15 oz. fire roasted diced tomatoes</li>
+    <li>2 cups chicken broth</li>
+    <li>2 oz. cream cheese</li>
+    <li>3 green onions, sliced</li>
+</ul>
+
