--- a/recipes/chicken-pasta.html
+++ b/recipes/chicken-pasta.html
@@ -36,3 +36,29 @@
     <li>3 green onions, sliced</li>
 </ul>
 
+<!--Steps-->
+<h2>Steps</h2>
+<ol>
+    <p><li>Combine the ingredients for the Cajun seasoning in a small bowl. Cut the chicken into 1/2 to 3/4 inch cubes. Place the cubed chicken in a bowl, pour the Cajun
+        seasoning over the top, and stir to coat the chicken in spices.
+    </li></p>
+    
+    <p><li>Add the olive oil and butter to a large deep skillet. Heat the oil and butter over medium-high until the skillet is very hot and the butter is melted and foamy.</li></p>
+
+    <p><li>Add the seasoned chicken to the skillet and cook for a couple minutes on each side, or just until the outside gets some color. The chicken does not need to 
+        be cooked through at this point.</li></p>
+
+    <p><li>Add the diced yellow onion to the skilled and continue to saute' for about 2 minutes more, or just until the onion begins to soften. Allow the moisture from
+        the onion to dissolve any browned bits from the bottom of the skillet.
+    </li></p>
+
+    <p><li>Next, add the pasta, fire roasted tomatoes (with the juices), and chicken broth to the skillet. Stir until everything is evenly combined, then place a 
+        lid on top and allow the broth to come to a boil.
+    </li></p>
+
+    <p><li>Once boiling, turn the heat down to medium-low and let the pasta simmer for about ten minutes, stirring every couple of minutes, until the pasta is tender and the liquid is thick and <strong><em>saucy</em></strong>.</li></p>
+
+    <p><li>Add the cream cheese to the skillet in chunks, then stir until it has melted into the sauce.</li></p>
+
+    <p><li>Top the pasta with sliced green onions and serve!</li></p>
+</ol>
