Add description of recipe

--- a/recipes/mustard-porkchops.html
+++ b/recipes/mustard-porkchops.html
@@ -2,3 +2,8 @@
 <h1>Mustard Balsamic Pork Chops</h1>
 
 <img src = "../images/mustard-porkchops.jpeg" alt = "Mustard Balsamic Pork Chops">
+
+<!--description of recipe-->
+<h2>Description</h2>
+
+<p>These <strong>Mustard Balsamic Pork Chops</strong> only take 5 minutes of prep time and 20 minutes in the oven.</p>
