--- a/recipes/mustard-porkchops.html
+++ b/recipes/mustard-porkchops.html
@@ -7,3 +7,13 @@
 <h2>Description</h2>
 
 <p>These <strong>Mustard Balsamic Pork Chops</strong> only take 5 minutes of prep time and 20 minutes in the oven.</p>
+
+<!--ingredients section-->
+<h2>Ingredients</h2>
+<ul>
+    <li>5 pork chops</li>
+    <li>1/4 cup olive oil</li>
+    <li>2 tablespoon wholegrain mustard</li>
+    <li>1 tablespoon fresh rosemary</li>
+    <li>salt and pepper to taste</li>
+</ul>
