--- a/recipes/mustard-porkchops.html
+++ b/recipes/mustard-porkchops.html
@@ -15,5 +15,19 @@
     <li>1/4 cup olive oil</li>
     <li>2 tablespoon wholegrain mustard</li>
     <li>1 tablespoon fresh rosemary</li>
+    <li>1/4 balsamic vinegar</li>
     <li>salt and pepper to taste</li>
 </ul>
+
+<!--steps-->
+<h2>Steps</h2>
+<ol>
+    <p><li><strong>Make the marinade:</strong> Whisk the olive oil, vinegar, rosemary, salt and pepper in a bowl until it begins to emulsify </li></p>
+
+    <p><li><strong>Marinate the chops:</strong> Place the pork chops in a baking dish, then pour the marinade over the chops and rub it all over them evenly so that they're completely covered. Cover with plastic wrap and refrigerate for at least 1 hour to overnight.</li></p>
+
+    <p><li><strong>Prep the oven: </strong> Preheat the over to 425 degrees F.</li></p>
+
+    <p><li><strong>Bake: </strong> Remove plastic wrap from the baking dish and bake them for about 20 to 30 minutes or until the internal temperature of the pork chops reaches 145 degrees F.</li></p>
+
+</ol>
