--- a/recipes/chicken-pasta.html
+++ b/recipes/chicken-pasta.html
@@ -39,8 +39,7 @@
 <!--Steps-->
 <h2>Steps</h2>
 <ol>
-    <p><li>Combine the ingredients for the Cajun seasoning in a small bowl. Cut the chicken into 1/2 to 3/4 inch cubes. Place the cubed chicken in a bowl, pour the Cajun
-        seasoning over the top, and stir to coat the chicken in spices.
+    <p><li>Combine the ingredients for the Cajun seasoning in a small bowl. Cut the chicken into 1/2 to 3/4 inch cubes. Place the cubed chicken in a bowl, pour the Cajun seasoning over the top, and stir to coat the chicken in spices.
     </li></p>
     
     <p><li>Add the olive oil and butter to a large deep skillet. Heat the oil and butter over medium-high until the skillet is very hot and the butter is melted and foamy.</li></p>
