--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 
     <head>
     <meta charset="utf-8">
+    <link rel = "stylesheet" href = "style.css" >
     <title>Good Ole' Food</title>
     <head>
 
