Reduce image size and add styling to image

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,7 +1,7 @@
 <!--title of recipe-->
 <h1>Good Ole' Fashioned Pancakes</h1>
 
-<img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes">
+<img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes" style = "width: 600px; height: auto">
 
 <!--description of recipe-->
 <h2>Description</h2>
