Add title, meta charset and link to style.css in head

--- a/recipes/chicken-pasta.html
+++ b/recipes/chicken-pasta.html
@@ -3,7 +3,9 @@
 <html>
 
     <head>
-    
+        <meta charset = "utf-8">
+        <link rel = "stylesheet" href = "style.css">
+        <title>Creamy Cajun Chicken Pasta</title>
     </head>
 
         <body>
