Add relative links for recipes, remove absolute links for recipes

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Odin Recipes</h1>
             
             <ul>
-                <li><a href = "file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li>
-                <li><a href = "file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li>
-                <li><a href = "file:///Users/michealleblanc/Desktop/TheOdinProject/odin-recipes/odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li>  
+                <li><a href = "../odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li>
+                <li><a href = "../odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li>
+                <li><a href = "../odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li>  
             </ul>
 
 
