Add html boiler plate, link style.css, fix formatting for consistency

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -1,34 +1,47 @@
-<!--title of recipe-->
-<h1>Good Ole' Fashioned Pancakes</h1>
+<!DOCTYPE html>
 
-<img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes" style = "width: 600px; height: auto">
+<html>
 
-<!--description of recipe-->
-<h2>Description</h2>
-<p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
+    <head>
+        <meta charset = "utf-8">
+        <link rel = "stylesheet" href = "../style.css">
+        <title>Good Ole' Fashioned Pancakes</title>
+    </head>
 
-<!--ingredients section-->
-<h2>Ingredients</h2>
+        <body>
+            <!--title of recipe-->
+            <h1>Good Ole' Fashioned Pancakes</h1>
 
-<ul>
-    <li>1 1/2 cups all-purpose flour</li>
-    <li>3 1/2 teaspoons baking powder</li>
-    <li>1 teaspoon salt</li>
-    <li>1 tablespoon white sugar</li>
-    <li>1 1/4 cups milk</li>
-    <li>1 egg</li>
-    <li>3 tablespoons butter, melted</li>
-</ul>
+            <img src = "../images/pancakes.jpg" alt = "Massive stack of buttery pancakes" style = "width: 600px; height: auto">
 
-<!--steps for recipe-->
-<h2>Steps</h2>
+            <!--description of recipe-->
+            <h2>Description</h2>
+            <p>This is the most delicious stack of pancakes your taste buds will experience. Its <strong>FLAVORTOWN!!!</strong>. The recipe has been a hit since the beginning of time, but this isn't your ordinary stack of pancakes recipe.</p> 
 
-<ol>
-    <p><li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg
-        and melted butter; mix until smooth.
-    </li></p>
-    <p><li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup
-        for each pancake. Brown on both sides and serve hot.
-    </li></p>
+            <!--ingredients section-->
+            <h2>Ingredients</h2>
 
-</ol>
+            <ul>
+                <li>1 1/2 cups all-purpose flour</li>
+                <li>3 1/2 teaspoons baking powder</li>
+                <li>1 teaspoon salt</li>
+                <li>1 tablespoon white sugar</li>
+                <li>1 1/4 cups milk</li>
+                <li>1 egg</li>
+                <li>3 tablespoons butter, melted</li>
+            </ul>
+
+            <!--steps for recipe-->
+            <h2>Steps</h2>
+
+            <ol>
+                <p><li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg
+                and melted butter; mix until smooth.
+                </li></p>
+                
+                <p><li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup
+                for each pancake. Brown on both sides and serve hot.
+                </li></p>
+            </ol>
+        </body>
+</html>
