Add html boilerplate, link style.css, fix formatting for consistency

--- a/recipes/mustard-porkchops.html
+++ b/recipes/mustard-porkchops.html
@@ -1,33 +1,45 @@
-<!--title of recipe-->
-<h1>Mustard Balsamic Pork Chops</h1>
+<!DOCTYPE html>
 
-<img src = "../images/mustard-porkchops.jpeg" alt = "Mustard Balsamic Pork Chops">
+<html>
 
-<!--description of recipe-->
-<h2>Description</h2>
+    <head>
+        <meta charset = "utf-8">
+        <link rel = "stylesheet" href = "../style.css">
+        <title>Mustard Balsamic Pork Chops</title>
+    </head>
 
-<p>These <strong>Mustard Balsamic Pork Chops</strong> only take 5 minutes of prep time and 20 minutes in the oven.</p>
+        <body>
+            <!--title of recipe-->
+            <h1>Mustard Balsamic Pork Chops</h1>
 
-<!--ingredients section-->
-<h2>Ingredients</h2>
-<ul>
-    <li>5 pork chops</li>
-    <li>1/4 cup olive oil</li>
-    <li>2 tablespoon wholegrain mustard</li>
-    <li>1 tablespoon fresh rosemary</li>
-    <li>1/4 balsamic vinegar</li>
-    <li>salt and pepper to taste</li>
-</ul>
+            <img src = "../images/mustard-porkchops.jpeg" alt = "Mustard Balsamic Pork Chops">
 
-<!--steps-->
-<h2>Steps</h2>
-<ol>
-    <p><li><strong>Make the marinade:</strong> Whisk the olive oil, vinegar, rosemary, salt and pepper in a bowl until it begins to emulsify </li></p>
+            <!--description of recipe-->
+            <h2>Description</h2>
 
-    <p><li><strong>Marinate the chops:</strong> Place the pork chops in a baking dish, then pour the marinade over the chops and rub it all over them evenly so that they're completely covered. Cover with plastic wrap and refrigerate for at least 1 hour to overnight.</li></p>
+            <p>These <strong>Mustard Balsamic Pork Chops</strong> only take 5 minutes of prep time and 20 minutes in the oven.</p>
 
-    <p><li><strong>Prep the oven: </strong> Preheat the over to 425 degrees F.</li></p>
+            <!--ingredients section-->
+            <h2>Ingredients</h2>
+            <ul>
+                <li>5 pork chops</li>
+                <li>1/4 cup olive oil</li>
+                <li>2 tablespoon wholegrain mustard</li>
+                <li>1 tablespoon fresh rosemary</li>
+                <li>1/4 balsamic vinegar</li>
+                <li>salt and pepper to taste</li>
+            </ul>
 
-    <p><li><strong>Bake: </strong> Remove plastic wrap from the baking dish and bake them for about 20 to 30 minutes or until the internal temperature of the pork chops reaches 145 degrees F.</li></p>
+            <!--steps-->
+            <h2>Steps</h2>
+            <ol>
+                <p><li><strong>Make the marinade:</strong> Whisk the olive oil, vinegar, rosemary, salt and pepper in a bowl until it begins to emulsify </li></p>
 
-</ol>
+                <p><li><strong>Marinate the chops:</strong> Place the pork chops in a baking dish, then pour the marinade over the chops and rub it all over them evenly so that they're completely covered. Cover with plastic wrap and refrigerate for at least 1 hour to overnight.</li></p>
+
+                <p><li><strong>Prep the oven: </strong> Preheat the over to 425 degrees F.</li></p>
+
+                <p><li><strong>Bake: </strong> Remove plastic wrap from the baking dish and bake them for about 20 to 30 minutes or until the internal temperature of the pork chops reaches 145 degrees F.</li></p>
+            </ol>
+        </body>
+</html>
