Add button to recipes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <body>
             <h1>Odin Recipes</h1>  
                 <ul>
-                    <li><a href = "../odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li>
-                    <li><a href = "../odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li>
-                    <li><a href = "../odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li>  
+                    <button><li><a href = "../odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li></button> 
+                    <button><li><a href = "../odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li></button>
+                    <button><li><a href = "../odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li>  </button>
                 </ul>
         </body>
 </html>
