Fix button container and add container for unordered lists to use for styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
-    <head>
+<head>
         <meta charset = "utf-8">
         <link rel = "stylesheet" href = "style.css" >
         <title>Good Ole' Food</title>
-    <head>
-        <body>
-            <h1>Odin Recipes</h1>  
-                <ul>
-                    <button><a href = "../odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li></button>
-                    <button><li><a href = "../odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li></button>
-                    <button><li><a href = "../odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li></button>
-                </ul>
-        </body>
+<head>
+    
+<body>
+<h1>Odin Recipes</h1>  
+    <div class = "main-buttons">
+        <ul>
+            <button><li><a href = "../odin-recipes/recipes/pancakes.html"> Good Ole' Fashioned Pancakes</a></li></button>
+            <button><li><a href = "../odin-recipes/recipes/chicken-pasta.html"> Creamy Cajun Chicken Pasta</a></li></button>
+            <button><li><a href = "../odin-recipes/recipes/mustard-porkchops.html"> Mustard Balsamic Pork Chops</a></li></button>
+        </ul>
+    </div>
+</body>
 </html>
